Fix broken height rule, and a few misc fixes (#130)
* Fix deploy action to target renamed main branch
* Fix transparent scrollbar filler
* Fix incorrect and broken height rules
* Fix comment spelling error

--- a/playground-styles.css
+++ b/playground-styles.css
@@ -15,7 +15,7 @@
   /* Set height, width, borders, and global font properties here */
   font-family: var(--playground-code-font-family, monospace);
   font-size: var(--playground-code-font-size, 14px);
-  height: 300px;
+  height: 350px;
   color: var(--playground-code-default-color, #000);
   background: var(--playground-code-background, #fff);
   direction: ltr;
@@ -38,7 +38,10 @@
 
 .CodeMirror-scrollbar-filler,
 .CodeMirror-gutter-filler {
-  background: transparent; /* The little square between H and V scrollbars */
+  background: var(
+    --playground-code-background,
+    #fff
+  ); /* The little square between H and V scrollbars */
 }
 
 /* GUTTER */
